--- a/Assets/Plugins/BetterStreamingAssets/Editor/BetterStreamingAssets-Editor.asmdef
+++ b/Assets/Plugins/BetterStreamingAssets/Editor/BetterStreamingAssets-Editor.asmdef
@@ -6,7 +6,13 @@
     "optionalUnityReferences": [
         "TestAssemblies"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
-    "allowUnsafeCode": false
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": []
 }
